[gd_scene load_steps=44 format=2]

[ext_resource path="res://Assets/Images/HomeMenu/FooterIcons/handheld-mode-dm.png" type="Texture" id=1]
[ext_resource path="res://Assets/Themes/Footer.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/NINTENDOSWITCHUI.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Images/HomeMenu/HeaderIcons/Nintendo-Switch-Icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Scripts/User Profile.gd" type="Script" id=5]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/ProfileButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/OnlinePlayInvitesButton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/FriendSuggestionsButton.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/UserSettingsButton.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/TrendingButton.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/AddFriendButton.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/FriendListButton.png" type="Texture" id=12]
[ext_resource path="res://Assets/Themes/DarkPanelTheme.tres" type="StyleBox" id=13]
[ext_resource path="res://Assets/Sounds/0101.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/ProfileButtonFrame1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/ProfileButtonFrame2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/AddFriendButtonFrame2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/AddFriendButtonFrame1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/UserSettingsButtonFrame1.png" type="Texture" id=19]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/UserSettingsButtonFrame2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/OnlinePlayInvitesButtonFrame2.png" type="Texture" id=21]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/OnlinePlayInvitesButtonFrame1.png" type="Texture" id=22]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/FriendSuggestionsButtonFrame1.png" type="Texture" id=23]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/FriendSuggestionsButtonFrame2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/FriendListButtonFrame1.png" type="Texture" id=25]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/FriendListButtonFrame2.png" type="Texture" id=26]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/TrendingButtonFrame1.png" type="Texture" id=27]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/TrendingButtonFrame2.png" type="Texture" id=28]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/ProfileButtonSelected.png" type="Texture" id=29]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/TrendingButtonSelected.png" type="Texture" id=30]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/FriendListButtonSelected.png" type="Texture" id=31]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/OnlinePlayInvitesButtonSelected.png" type="Texture" id=32]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/FriendSuggestionsButtonSelected.png" type="Texture" id=33]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/UserSettingsButtonSelected.png" type="Texture" id=34]
[ext_resource path="res://Assets/Images/UserProfile/ScrollBarButtons/AddFriendButtonSelected.png" type="Texture" id=35]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 15 )
frame_1/texture = ExtResource( 16 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=3]
flags = 4
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 25 )
frame_1/texture = ExtResource( 26 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=4]
flags = 4
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 27 )
frame_1/texture = ExtResource( 28 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=5]
flags = 4
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 22 )
frame_1/texture = ExtResource( 21 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=6]
flags = 4
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 23 )
frame_1/texture = ExtResource( 24 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=7]
flags = 4
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 18 )
frame_1/texture = ExtResource( 17 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=8]
flags = 4
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 19 )
frame_1/texture = ExtResource( 20 )
frame_1/delay_sec = 0.0

[node name="User Profile" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 13 )
script = ExtResource( 5 )

[node name="Footer" type="HSeparator" parent="."]
anchor_top = 0.923611
anchor_right = 1.0
anchor_bottom = 0.929167
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ModeIcon" type="TextureRect" parent="Footer"]
anchor_left = 0.0210938
anchor_top = 2.75
anchor_right = 0.0757812
anchor_bottom = 10.75
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Footer"]
anchor_left = 0.910937
anchor_top = 1.99985
anchor_right = 0.994531
anchor_bottom = 12.499
text = "Home"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Header" type="HSeparator" parent="."]
anchor_top = 0.104167
anchor_right = 1.0
anchor_bottom = 0.109723
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserProfile" type="TextureRect" parent="Header"]
anchor_left = 0.0203125
anchor_top = -17.2487
anchor_right = 0.0703125
anchor_bottom = -1.2499
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserProfileLabel" type="Label" parent="Header/UserProfile"]
anchor_left = 1.0
anchor_top = 0.203125
anchor_right = 3.04688
anchor_bottom = 0.8125
custom_fonts/font = SubResource( 1 )
text = "NX's Page"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserProfileButtonsScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.0460938
anchor_top = 0.106944
anchor_right = 0.211719
anchor_bottom = 0.925
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserProfileVBoxContainer" type="VBoxContainer" parent="UserProfileButtonsScrollContainer"]
margin_right = 200.0
margin_bottom = 612.0
custom_constants/separation = 20

[node name="HSeparator" type="HSeparator" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_right = 200.0
margin_bottom = 4.0

[node name="ProfileButton" type="TextureButton" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 84.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 29 )
texture_hover = SubResource( 2 )

[node name="HSeparator2" type="HSeparator" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_top = 104.0
margin_right = 200.0
margin_bottom = 108.0

[node name="FriendsListButton" type="TextureButton" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_top = 128.0
margin_right = 200.0
margin_bottom = 188.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 31 )
texture_hover = SubResource( 3 )

[node name="TrendingButton" type="TextureButton" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_top = 208.0
margin_right = 200.0
margin_bottom = 268.0
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 30 )
texture_hover = SubResource( 4 )

[node name="OnlinePlayInvitesButton" type="TextureButton" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_top = 288.0
margin_right = 200.0
margin_bottom = 348.0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 32 )
texture_hover = SubResource( 5 )

[node name="FriendSuggestionsButton" type="TextureButton" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_top = 368.0
margin_right = 200.0
margin_bottom = 428.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 33 )
texture_hover = SubResource( 6 )

[node name="AddFriendButton" type="TextureButton" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_top = 448.0
margin_right = 200.0
margin_bottom = 508.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 35 )
texture_hover = SubResource( 7 )

[node name="HSeparator3" type="HSeparator" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_top = 528.0
margin_right = 200.0
margin_bottom = 532.0

[node name="UserSettingsButton" type="TextureButton" parent="UserProfileButtonsScrollContainer/UserProfileVBoxContainer"]
margin_top = 552.0
margin_right = 200.0
margin_bottom = 612.0
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 34 )
texture_hover = SubResource( 8 )

[node name="MoveSelectorAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[connection signal="pressed" from="Footer/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="UserProfileButtonsScrollContainer/UserProfileVBoxContainer/ProfileButton" to="." method="_on_ProfileButton_mouse_entered"]
[connection signal="mouse_entered" from="UserProfileButtonsScrollContainer/UserProfileVBoxContainer/FriendsListButton" to="." method="_on_FriendsListButton_mouse_entered"]
[connection signal="mouse_entered" from="UserProfileButtonsScrollContainer/UserProfileVBoxContainer/TrendingButton" to="." method="_on_TrendingButton_mouse_entered"]
[connection signal="mouse_entered" from="UserProfileButtonsScrollContainer/UserProfileVBoxContainer/OnlinePlayInvitesButton" to="." method="_on_OnlinePlayInvitesButton_mouse_entered"]
[connection signal="mouse_entered" from="UserProfileButtonsScrollContainer/UserProfileVBoxContainer/FriendSuggestionsButton" to="." method="_on_FriendSuggestionsButton_mouse_entered"]
[connection signal="mouse_entered" from="UserProfileButtonsScrollContainer/UserProfileVBoxContainer/AddFriendButton" to="." method="_on_AddFriendButton_mouse_entered"]
[connection signal="mouse_entered" from="UserProfileButtonsScrollContainer/UserProfileVBoxContainer/UserSettingsButton" to="." method="_on_UserSettingsButton_mouse_entered"]
